--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,14 +15,15 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Rust
-      uses: actions/setup-rust@v1
+      uses: actions-rs/toolchain@v1
       with:
-        rust-version: stable
+        toolchain: stable
+        override: true
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: sudo apt-get update && sudo apt-get install -y pkg-config libssl-dev
 
-    - name: Build
+    - name: Build project
       run: cargo build --verbose
       working-directory: rust-example
 
